Fix alignment aside elements

--- a/packages/portal/src/assets/scss/cards.scss
+++ b/packages/portal/src/assets/scss/cards.scss
@@ -480,7 +480,7 @@
 }
 
 .card-group-list .card,
-.card-group-list aside.masonry-tile,
+.card-group-list aside.related-results,
 .card-deck-3-cols .card,
 .card-deck-4-cols .card {
   flex: 0 0 100%;
@@ -499,7 +499,9 @@
     margin-right: 0;
   }
 
-
+  aside.related-results {
+    padding-left: 1rem;
+  }
 }
 
 @media (min-width: $bp-medium) {
